:dizzy: Add ICESat-2 crossover-track schematic from Li et al. 2020
To illustrate the ICESat-2 altimetry crossover-track analysis method better, we're adding a nice figure from Li et al. 2020 (Figure 4 in https://doi.org/10.5194/tc-14-3629-2020). Technically it also shows the repeat-track analysis method, but still good to show how things work!

--- a/thesis.bib
+++ b/thesis.bib
@@ -1724,6 +1724,19 @@
   urldate = {2020-07-30},
 }
 
+@article{LiMappinggroundingzone2020,
+  author = {Li, Tian and Dawson, Geoffrey J. and Chuter, Stephen J. and Bamber, Jonathan L.},
+  date = {2020-11-02},
+  doi = {10.5194/tc-14-3629-2020},
+  issn = {1994-0424},
+  journaltitle = {The Cryosphere},
+  langid = {english},
+  number = {11},
+  pages = {3629--3643},
+  title = {Mapping the Grounding Zone of {{Larsen C Ice Shelf}}, {{Antarctica}}, from {{ICESat}}-2 Laser Altimetry},
+  volume = {14},
+}
+
 @article{LiRadarSoundingConfirms2020,
   author = {Li, Yan and Lu, Yang and Siegert, Martin J.},
   date = {2020-07-14},
