:bug: Fix some minor LaTeX errors due to incorrect characters
Use curly brackets and double-quotes properly, else Overleaf will complain! Also fixed an incorrect ISBN for the Wang et al. 2019 ESRGAN paper.

--- a/thesis.bib
+++ b/thesis.bib
@@ -1772,7 +1772,7 @@
   number = {23},
   pages = {n/a--n/a},
   shortjournal = {Geophys. Res. Lett.},
-  title = {Quantifying the Seasonal “Breathing” of the {{Antarctic}} Ice Sheet: “{{BREATHING}}” {{OF THE ANTARCTIC ICE SHEET}}},
+  title = {Quantifying the Seasonal "Breathing" of the {{Antarctic}} Ice Sheet},
   volume = {39},
 }
 
@@ -3076,7 +3076,7 @@
   booktitle = {Computer {{Vision}} – {{ECCV}} 2018 {{Workshops}}},
   date = {2019},
   doi = {10.1007/978-3-030-11021-5_5},
-  isbn = {978-3-030-11020-8 978-3-030-11021-5},
+  isbn = {978-3-030-11021-5},
   langid = {english},
   pages = {63--79},
   series = {Lecture {{Notes}} in {{Computer Science}}},
