:pencil: Catching a few more minor typos in the front sections
Getting there! Change date on title page, fix some punctuations in the acknowledgements, put down IPCC as the author of the SROCC, spell out Helen Fricker's name in full, and hopefully not too much more to do.

--- a/thesis.bib
+++ b/thesis.bib
@@ -835,7 +835,7 @@
 }
 
 @article{FrickerActiveSubglacialWater2007,
-  author = {Fricker, H. A. and Scambos, T. A. and Bindschadler, R. and Padman, L.},
+  author = {Fricker, Helen Amanda and Scambos, T. A. and Bindschadler, R. and Padman, L.},
   date = {2007-03-16},
   doi = {10.1126/science.1136897},
   issn = {0036-8075, 1095-9203},
@@ -845,19 +845,6 @@
   pages = {1544--1548},
   title = {An {{Active Subglacial Water System}} in {{West Antarctica Mapped}} from {{Space}}},
   volume = {315},
-}
-
-@article{Frickerdecadeprogressobserving2016,
-  author = {Fricker, Helen A. and Siegfried, Matthew Ross and Carter, Sasha P. and Scambos, Ted A.},
-  date = {2016-01-28},
-  doi = {10.1098/rsta.2014.0294},
-  issn = {1364-503X, 1471-2962},
-  journaltitle = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
-  langid = {english},
-  number = {2059},
-  pages = {20140294},
-  title = {A Decade of Progress in Observing and Modelling {{Antarctic}} Subglacial Water Systems},
-  volume = {374},
 }
 
 @article{FrickerConnectedsubglaciallake2009,
@@ -884,6 +871,19 @@
   pages = {187--199},
   title = {Synthesizing Multiple Remote-Sensing Techniques for Subglacial Hydrologic Mapping: Application to a Lake System beneath {{MacAyeal Ice Stream}}, {{West Antarctica}}},
   volume = {56},
+}
+
+@article{Frickerdecadeprogressobserving2016,
+  author = {Fricker, Helen Amanda and Siegfried, Matthew Ross and Carter, Sasha P. and Scambos, Ted A.},
+  date = {2016-01-28},
+  doi = {10.1098/rsta.2014.0294},
+  issn = {1364-503X, 1471-2962},
+  journaltitle = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+  langid = {english},
+  number = {2059},
+  pages = {20140294},
+  title = {A Decade of Progress in Observing and Modelling {{Antarctic}} Subglacial Water Systems},
+  volume = {374},
 }
 
 @article{FukushimaNeocognitronnewalgorithm1982,
@@ -1373,6 +1373,16 @@
   eprinttype = {arxiv},
   title = {Batch {{Normalization}}: {{Accelerating Deep Network Training}} by {{Reducing Internal Covariate Shift}}},
   urldate = {2020-01-15},
+}
+
+@incollection{PortnerSummaryPolicymakers2019,
+  author = {{IPCC}},
+  editor = {Pörtner, Hans-Otto and Roberts, Debra C. and Masson-Delmotte, Valérie and Zhai, Panmao and Tignor, Melinda and Poloczanska, Elvira and Mintenbeck, Katja and Alegría, Andrés and Nicolai, Maike and Okem, Andrew and Petzold, Jan and Rama, Bardhyl and Weyer, Nora M.},
+  url = {https://www.ipcc.ch/srocc/chapter/summary-for-policymakers/},
+  booktitle = {{{IPCC Special Report}} on the {{Ocean}} and {{Cryosphere}} in a {{Changing Climate}}},
+  date = {2019},
+  title = {Summary for {{Policymakers}}},
+  urldate = {2020-01-16},
 }
 
 @online{IsolaImagetoImageTranslationConditional2016,
@@ -2209,15 +2219,6 @@
   eprinttype = {arxiv},
   title = {Semantic {{Image Synthesis}} with {{Spatially}}-{{Adaptive Normalization}}},
   urldate = {2019-03-19},
-}
-
-@incollection{PortnerSummaryPolicymakers2019,
-  editor = {Pörtner, Hans-Otto and Roberts, Debra C. and Masson-Delmotte, Valérie and Zhai, Panmao and Tignor, Melinda and Poloczanska, Elvira and Mintenbeck, Katja and Alegría, Andrés and Nicolai, Maike and Okem, Andrew and Petzold, Jan and Rama, Bardhyl and Weyer, Nora M.},
-  url = {https://www.ipcc.ch/srocc/chapter/summary-for-policymakers/},
-  booktitle = {{{IPCC Special Report}} on the {{Ocean}} and {{Cryosphere}} in a {{Changing Climate}}},
-  date = {2019},
-  title = {Summary for {{Policymakers}}},
-  urldate = {2020-01-16},
 }
 
 @article{PritchardExtensivedynamicthinning2009,
