--- a/thesis.tex
+++ b/thesis.tex
@@ -128,13 +128,13 @@ I feel really fortunate to be able to stand on the shoulders of giants, and woul
 
 \paragraph{Open source}
 
-To Leonardo Uieda, DongDong Tian 田冬冬, Liam Toney and the rest of the PyGMT team, and also to Paul Wessel for his enduring work on the Generic Mapping Tools (GMT) package over many decades, it is a pleasure to have such a great tool for producing beautiful maps。
+To Leonardo Uieda, DongDong Tian 田冬冬, Liam Toney and the rest of the PyGMT team, and also to Paul Wessel for his enduring work on the Generic Mapping Tools (GMT) package over many decades, it is a pleasure to have such a great tool for producing beautiful maps.
 To all the folks maintaining the Python and Pangeo ecosystem of geospatial packages, from Xarray to RAPIDS AI and every imaginable library in between, thank you for all the new features and bug fixes, keep up the good work!
 
 \paragraph{Europe}
 
 To Poonam Vishwas, KaiKai Xue 薛凯, Yawen Tan 谭雅文, and all the friends I met in the 2019 Erasmus+ exchange at ZGIS, University of Salzburg, Austria, it was an awesome experience having so many like-minded people researching GIS together in Europe, an experience I will always treasure.
-To Dr. Hermann Klug, thank you for warmly inviting me to Salzburg and sorting out all manners of logistics in German, and to Dr. Dirk Tiede for introducing me to Object Based Image Analysis and providing a conceptual framework for understanding the place of Convolutional Neural Networks in the wider field supervised classification is GIS.
+To Dr. Hermann Klug, thank you for warmly inviting me to Salzburg and sorting out all manners of logistics in German, and to Dr. Dirk Tiede for introducing me to Object Based Image Analysis and providing a conceptual framework for understanding the place of Convolutional Neural Networks in the wider field of supervised classification in GIS.
 
 \paragraph{United States}
 
