:rocket: Finishing touches with copyright and citations
Finalizing this PhD thesis once and for all! Obtained copyright permission for figures from external sources, ranging from filling in online forms to acknowledging that it is Creative Commons licensed. Properly citing the Siegfried & Fricker 2021 paper now that it is finally out on GRL, and editing some last minute issues with the thesis.bib file. Also a few more typo fixes and typesetting tweaks.

--- a/thesis.bib
+++ b/thesis.bib
@@ -361,7 +361,7 @@
   langid = {english},
   number = {3},
   pages = {n/a--n/a},
-  title = {Radar-Based Subglacial Lake Classification in {{Antarctica}}: {{ANTARCTIC SUBGLACIAL LAKES}}},
+  title = {Radar-Based Subglacial Lake Classification in {{Antarctica}}},
   volume = {8},
 }
 
@@ -690,7 +690,6 @@
   journaltitle = {Geophysical Research Letters},
   langid = {english},
   number = {20},
-  pages = {n/a--n/a},
   title = {Impact of Bedrock Description on Modeling Ice Sheet Dynamics},
   volume = {38},
 }
@@ -1073,7 +1072,7 @@
   volume = {108},
 }
 
-@incollection{GudmundssonInverseMethodsGlaciology2011,
+@inbook{GudmundssonInverseMethodsGlaciology2011,
   author = {Gudmundsson, G. Hilmar},
   editor = {Singh, Vijay P. and Singh, Pratap and Haritashya, Umesh K.},
   location = {Dordrecht},
@@ -1194,18 +1193,6 @@
   volume = {25},
 }
 
-@article{Hindmarshnumericalcomparisonapproximations2004,
-  author = {Hindmarsh, R. C. A.},
-  date = {2004-03},
-  doi = {10.1029/2003JF000065},
-  issn = {01480227},
-  journaltitle = {Journal of Geophysical Research: Earth Surface},
-  langid = {english},
-  number = {F1},
-  title = {A Numerical Comparison of Approximations to the {{Stokes}} Equations Used in Ice Sheet and Glacier Modeling},
-  volume = {109},
-}
-
 @article{HindmarshDrumlinizationdrumlinforminginstabilities1998,
   author = {Hindmarsh, Richard C. A.},
   date = {1998},
@@ -1217,6 +1204,18 @@
   pages = {293--314},
   title = {Drumlinization and Drumlin-Forming Instabilities: Viscous till Mechanisms},
   volume = {44},
+}
+
+@article{Hindmarshnumericalcomparisonapproximations2004,
+  author = {Hindmarsh, Richard C. A.},
+  date = {2004-03},
+  doi = {10.1029/2003JF000065},
+  issn = {01480227},
+  journaltitle = {Journal of Geophysical Research: Earth Surface},
+  langid = {english},
+  number = {F1},
+  title = {A Numerical Comparison of Approximations to the {{Stokes}} Equations Used in Ice Sheet and Glacier Modeling},
+  volume = {109},
 }
 
 @article{HochmuthEvolvingPaleobathymetryCircum2020,
@@ -1237,7 +1236,6 @@
   date = {2020-04-09},
   doi = {10.5194/tc-2020-80},
   title = {Brief {{Communication}}: {{Heterogenous}} Thinning and Subglacial Lake Activity on {{Thwaites Glacier}}, {{West Antarctica}}},
-  type = {preprint},
 }
 
 @article{HoffmanFeedbackscoupledsubglacial2014,
@@ -1375,7 +1373,7 @@
   urldate = {2020-01-15},
 }
 
-@incollection{PortnerSummaryPolicymakers2019,
+@inbook{PortnerSummaryPolicymakers2019,
   author = {{IPCC}},
   editor = {Pörtner, Hans-Otto and Roberts, Debra C. and Masson-Delmotte, Valérie and Zhai, Panmao and Tignor, Melinda and Poloczanska, Elvira and Mintenbeck, Katja and Alegría, Andrés and Nicolai, Maike and Okem, Andrew and Petzold, Jan and Rama, Bardhyl and Weyer, Nora M.},
   url = {https://www.ipcc.ch/srocc/chapter/summary-for-policymakers/},
@@ -1557,7 +1555,7 @@
   volume = {544},
 }
 
-@incollection{KrizhevskyImageNetClassificationDeep2012,
+@inproceedings{KrizhevskyImageNetClassificationDeep2012,
   author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
   editor = {Pereira, F. and Burges, C. J. C. and Bottou, L. and Weinberger, K. Q.},
   location = {Lake Tahoe, Nevada},
@@ -1780,7 +1778,6 @@
   journaltitle = {Geophysical Research Letters},
   langid = {english},
   number = {23},
-  pages = {n/a--n/a},
   shortjournal = {Geophys. Res. Lett.},
   title = {Quantifying the Seasonal "Breathing" of the {{Antarctic}} Ice Sheet},
   volume = {39},
@@ -2015,7 +2012,6 @@
   journaltitle = {Geophysical Research Letters},
   langid = {english},
   number = {19},
-  pages = {n/a--n/a},
   title = {A Mass Conservation Approach for Mapping Glacier Ice Thickness},
   volume = {38},
 }
@@ -2281,7 +2277,6 @@
   journaltitle = {Geophysical Research Letters},
   langid = {english},
   number = {10},
-  pages = {n/a--n/a},
   title = {Antarctic Grounding Line Mapping from Differential Satellite Radar Interferometry},
   volume = {38},
 }
@@ -2325,7 +2320,7 @@
 }
 
 @article{RobinInterpretationRadioEcho1969,
-  author = {Robin, G. D. Q. and Evans, S. and Bailey, J. T.},
+  author = {Robin, G. De Q. and Evans, S. and Bailey, J. T.},
   date = {1969-12-18},
   doi = {10.1098/rsta.1969.0063},
   issn = {1364-503X, 1471-2962},
@@ -2337,7 +2332,7 @@
   volume = {265},
 }
 
-@incollection{RobinRadioechoexploration1970,
+@inproceedings{RobinRadioechoexploration1970,
   author = {Robin, G. De Q. and Swithinbank, C.W.M and Smith, B.M.E.},
   editor = {Gow, A.J. and Keeler, C. and Langway, C.C. and Weeks, W.F.},
   location = {Hanover, New Hampshire, USA},
@@ -2345,10 +2340,10 @@
   url = {https://iahs.info/uploads/dms/086017.pdf},
   booktitle = {International {{Symposium}} on {{Antarctic Glaciological Exploration}} ({{ISAGE}})},
   date = {1970},
-  number = {86},
   pages = {97--115},
   series = {{{IASH}} Publication},
   title = {Radio Echo Exploration of the {{Antarctic}} Ice Sheet},
+  volume = {86},
 }
 
 @article{RooneyTillicestream1987,
@@ -2403,7 +2398,7 @@
 }
 
 @inbook{ScambosSnowMegadune2014,
-  author = {Scambos, Ted},
+  author = {Scambos, Ted A.},
   bookauthor = {Hargitai, Henrik and Kereszturi, Ákos},
   location = {New York, NY},
   publisher = {Springer New York},
@@ -2494,7 +2489,7 @@
 }
 
 @article{SchoofThinFilmFlowsWall2010,
-  author = {Schoof, Christian and Hindmarsh, R. C. A.},
+  author = {Schoof, Christian and Hindmarsh, Richard C. A.},
   date = {2010-02-01},
   doi = {10.1093/qjmam/hbp025},
   issn = {0033-5614, 1464-3855},
@@ -2520,7 +2515,7 @@
 }
 
 @article{SergienkoRegularPatternsFrictional2013,
-  author = {Sergienko, O. V. and Hindmarsh, R. C. A.},
+  author = {Sergienko, O. V. and Hindmarsh, Richard C. A.},
   date = {2013-11-29},
   doi = {10.1126/science.1243903},
   issn = {0036-8075, 1095-9203},
@@ -2739,6 +2734,17 @@
   volume = {43},
 }
 
+@article{SiegfriedIlluminatingactivesubglacial2021,
+  author = {Siegfried, Matthew Ross and Fricker, Helen Amanda},
+  date = {2021-07-07},
+  doi = {10.1029/2020GL091089},
+  issn = {0094-8276, 1944-8007},
+  journaltitle = {Geophysical Research Letters},
+  langid = {english},
+  shortjournal = {Geophys Res Lett},
+  title = {Illuminating Active Subglacial Lake Processes with {{ICESat}}‐2 Laser Altimetry},
+}
+
 @online{SimonyanVeryDeepConvolutional2014,
   author = {Simonyan, Karen and Zisserman, Andrew},
   url = {http://arxiv.org/abs/1409.1556},
@@ -2748,20 +2754,6 @@
   eprinttype = {arxiv},
   title = {Very {{Deep Convolutional Networks}} for {{Large}}-{{Scale Image Recognition}}},
   urldate = {2018-01-26},
-}
-
-@article{Smith-Johnsenrolesubglacialhydrology2020,
-  options = {useprefix=1},
-  author = {Smith-Johnsen, Silje and de Fleurian, Basile and Nisancioglu, Kerim H.},
-  date = {2020-04},
-  doi = {10.1017/jog.2020.8},
-  issn = {0022-1430, 1727-5652},
-  journaltitle = {Journal of Glaciology},
-  langid = {english},
-  number = {256},
-  pages = {303--312},
-  title = {The Role of Subglacial Hydrology in Ice Streams with Elevated Geothermal Heat Flux},
-  volume = {66},
 }
 
 @article{SmithRapiderosiondrumlin2007,
@@ -2852,6 +2844,20 @@
   pages = {451--467},
   title = {Connected Subglacial Lake Drainage beneath {{Thwaites Glacier}}, {{West Antarctica}}},
   volume = {11},
+}
+
+@article{Smith-Johnsenrolesubglacialhydrology2020,
+  options = {useprefix=1},
+  author = {Smith-Johnsen, Silje and de Fleurian, Basile and Nisancioglu, Kerim H.},
+  date = {2020-04},
+  doi = {10.1017/jog.2020.8},
+  issn = {0022-1430, 1727-5652},
+  journaltitle = {Journal of Glaciology},
+  langid = {english},
+  number = {256},
+  pages = {303--312},
+  title = {The Role of Subglacial Hydrology in Ice Streams with Elevated Geothermal Heat Flux},
+  volume = {66},
 }
 
 @article{SolheimSeafloormorphologyoutside1985,
@@ -2981,13 +2987,13 @@
   title = {Global {{Bathymetry}} and {{Topography}} at 15 {{Arc Sec}}: {{SRTM15}}+},
 }
 
-@incollection{TsaiMultiframeimagerestoration1984,
+@inproceedings{TsaiMultiframeimagerestoration1984,
   author = {Tsai, R. and Huang, Thomas S.},
   editor = {Huang, Thomas S.},
   location = {Greenwich, CT},
   publisher = {JAI Press},
   url = {https://ci.nii.ac.jp/naid/10026807118/en/},
-  booktitle = {Advance {{Computer Visual}} and {{Image Processing}}},
+  booktitle = {Advances in {{Computer Vision}} and {{Image Processing}}},
   date = {1984},
   pages = {317--339},
   title = {Multiframe Image Restoration and Registration},
@@ -3069,7 +3075,7 @@
   volume = {34},
 }
 
-@incollection{WangESRGANEnhancedSuperResolution2019,
+@inproceedings{WangESRGANEnhancedSuperResolution2019,
   author = {Wang, Xintao and Yu, Ke and Wu, Shixiang and Gu, Jinjin and Liu, Yihao and Dong, Chao and Qiao, Yu and Loy, Chen Change},
   editor = {Leal-Taixé, Laura and Roth, Stefan},
   location = {Cham},
